update for datepicker-orient-top

--- a/less/datepicker.less
+++ b/less/datepicker.less
@@ -27,6 +27,8 @@
 	-moz-box-shadow: none;
 	box-shadow: none;
 
+	z-index: 999 !important;
+
 	&-inline {
 		width: 220px;
 	}
@@ -70,8 +72,12 @@
 		&.datepicker-orient-left:after    { left: 15px; }
 		&.datepicker-orient-right:before  { right: 14px; }
 		&.datepicker-orient-right:after   { right: 15px; }
-		&.datepicker-orient-top:before    { top: -15px; }
-		&.datepicker-orient-top:after     { top: -14px; }
+		&.datepicker-orient-top:before    { top: -8px; }
+		&.datepicker-orient-top:after     { top: -6px; }
+
+		&.datepicker-orient-top {
+			margin-top: 10px;
+		}
 
 		&.datepicker-orient-bottom:before {
 			bottom: -7px;
